# Decentralized-Grant-Distribution-Platform

./: .gitignore  README.md  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/activity/: page.tsx
app/dashboard/: page.tsx
app/grants/: page.tsx
app/transactions/: page.tsx
components/: Navbar.tsx  Providers.tsx  TransactionDrawer.tsx  WalletModal.tsx
contracts/: grant_distribution.wasm
contracts/grant_distribution/: Cargo.toml
contracts/grant_distribution/src/: lib.rs
hooks/: useEventFeed.ts  useTransactionTracker.ts  useWallet.ts
lib/: contract-config.json  contract.ts  stellar-rpc.ts  wallet.ts
scripts/: deploy.ts
types/: index.ts
